--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -331,7 +331,7 @@ title: Math, Sonification, Plots
 	</div>
 	
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black(); play_cook(this);" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black();" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
 		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
@@ -345,7 +345,7 @@ title: Math, Sonification, Plots
 	</div>
 
 	<audio  id="audio" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"
-			
+			id="audio_cook" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_cook_sound.mp4"
 	</audio>
 	
 	<script>
