--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -330,7 +330,7 @@ title: Math, Sonification, Plots
 		</div>
 	</div>
 	
-	<div class="btn-group btn-group-lg">
+	<div class="btn-group btn-group-lg myFunction">
 		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playButton)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
 		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
