--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -308,10 +308,10 @@ title: Math, Sonification, Plots
 				 style="width:150%;height:auto;"
 				 title="Click on Image for Description of Usage"
 				 onclick = "change(); play(playButton);"/>
-			<script>
-			<div id ="myAnimation"></div>
-			<img id="myAnimation" class="center fit myContainer">
-			</script>
+			<style>
+				<div id ="myAnimation"></div>
+				<img id="myAnimation" class="center fit myContainer">
+			</style>
 			<img id="myAnimation"/>
 		</div>
 		<div class="floatWarning">
