--- a/cs6750/MICROWAVE_PROTOTYPE/index - BACK.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index - BACK.html
@@ -11,6 +11,10 @@ title: Math, Sonification, Plots
 	<br><br>
 	
     <style>
+		body {
+			padding-bottom: 50px;
+		}
+
         .btn-group button {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
@@ -167,6 +171,7 @@ title: Math, Sonification, Plots
         }
         
         .center {
+				text-align: center;
                 display: block;
                 margin: auto;
         }
@@ -217,8 +222,10 @@ title: Math, Sonification, Plots
 		}
 
         #myAnimation {
-                width: 71px;
-                height: 71px;
+				width: 71px; 
+				height: 71px; 
+				/* max-width: 100%; */
+				/* height: auto; */
                 position: relative;
 				/* position: absolute; */
 				/* position: sticky; */
@@ -283,8 +290,8 @@ title: Math, Sonification, Plots
         The concept originates from a
         <a href="https://omscs.gatech.edu/cs-6750-human-computer-interaction"
         target="_blank">CS 6750: Human-Computer Interaction</a> research project.
-    </p></div>
-    <br>
+    </p></div><br>
+	
     <div><p>
         The results from this project will advance research for developing better interfaces that improve 
         accessibility and user experience for visually impaired audiences. This project will culminate with a 
@@ -296,13 +303,13 @@ title: Math, Sonification, Plots
 	<div class="myContainer">
 		<div class="floatItems">
 			<img id="myFunction"
-				src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-				style="width:150%;height:auto;"
-				title="Click on Image for Description of Usage"
-				onclick = "change(); play(playButton);"/>
+				 class="myContainer"
+				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
+				 style="width:150%;height:auto;"
+				 title="Click on Image for Description of Usage"
+				 onclick = "change(); play(playButton);"/>
 			<script>
 			<div id ="myAnimation"></div>
-			<img class="myAnimation" class="center fit myContainer">
 			<img id="myAnimation" class="center fit myContainer">
 			</script>
 			<img id="myAnimation"/>
@@ -318,10 +325,10 @@ title: Math, Sonification, Plots
 			</p></div>
 		</div>
 	</div>
-		
+	
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black()" style="background-color: red; color: black;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="background-color: #ADD8E6; color: black;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black()" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
@@ -332,15 +339,14 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
-	<footer><div><p><br></p></div></footer>
 
-
+	<audio id="audio" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
 	<script>
 		var playButton = document.getElementById("playButton")
 
 		function change() {
-			var img1 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png",
-				img2 = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png";
+			var img1 = "https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
+				img2 = "https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
 			var imgElement = document.getElementById('myFunction');
 			imgElement.src = (imgElement.src === img1)? img2 : img1;
 		}
