--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -327,7 +327,7 @@ title: Math, Sonification, Plots
 	</div>
 	
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black()" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playButton)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
 		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
