--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -383,7 +383,7 @@ title: Math, Sonification, Plots
 			}
 
 			function play(button) {
-					if (button == "playButton") {
+					if (button == playButton) {
 						var audio = document.getElementById("audio");
 					}
 					var elem = document.getElementById("myAnimation");
