--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -307,13 +307,14 @@ title: Math, Sonification, Plots
 				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				 style="width:150%;height:auto;"
 				 title="Click on Image for Description of Usage"
-				 onclick = "change(); play(playButton);"/>
+				 onclick = "change(); play(playSetTime);"/>
 			<style>
 				<div id ="myAnimation"></div>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
 			<img id="myAnimation"/>
 		</div>
+		
 		<div class="floatWarning">
 			<div><p>
 				This <strong>Wireframe</strong> is a Proof of Concept (POC) design for a novel microwave interface.
@@ -327,8 +328,8 @@ title: Math, Sonification, Plots
 	</div>
 	
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playButton)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White()" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
+		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playCook)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button type="button" class="btn_xl" onclick="setBG_White(); play(playDefrost)" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
@@ -340,7 +341,7 @@ title: Math, Sonification, Plots
 		</style>
 	</div>
 
-	<audio id="audio" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
+	<audio id="audio_intro" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
 	<audio 	id="audio_cook" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_cook_sound.mp4"></audio>
 	<script>
 		function change() {
@@ -369,8 +370,9 @@ title: Math, Sonification, Plots
 	</script>
 
 	<script>
-			var playSetTime = document.getElementById("playButton")
-			var audio = document.getElementById("audio");
+			var playSetTime = document.getElementById("playSetTime")
+			var playCook = document.getElementById("playCook")
+			
 			audio.volume = 0.4;
 			var isPlaying = false;
 
@@ -384,8 +386,12 @@ title: Math, Sonification, Plots
 
 			function play(button) {
 					if (button == playSetTime) {
-						var audio = document.getElementById("audio");
+						var audio = document.getElementById("audio_intro");
 					}
+					else if (button == playCook) {
+						var audio = document.getElementById("audio_cook");
+					}
+					
 					var elem = document.getElementById("myAnimation");
 					var newone = elem.cloneNode(true);
 					
