--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -376,9 +376,9 @@ title: Math, Sonification, Plots
 	</script>
 
 	<script>
-			var playSetTime = document.getElementById("playSetTime")
-			var playCook = document.getElementById("playCook")
-			var playDefrost = document.getElementById("playDefrost")
+			var playSetTime = "playSetTime";
+			var playCook = "playCook";
+			var playDefrost = "playDefrost";
 			var isPlaying = false;
 			audio.volume = 0.4;
 
