MODIFY FILES: PAUSE SOUNDS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -405,6 +405,9 @@ title: Math, Sonification, Plots
 							audio.pause();
 							isPlaying = false;
 						}
+						else {
+							isPlaying = false;
+						}
 					}
 			}
 	</script>
