MODIFY FILES: PAUSE SOUNDS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -397,7 +397,7 @@ title: Math, Sonification, Plots
 						var audio = document.getElementById("audio_defrost");
 					}
 					
-					if (!isPlaying) {
+					if (!isPlaying & isPaused) {
 						audio.play();
 						isPlaying = true;
 					}
