--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -376,13 +376,12 @@ title: Math, Sonification, Plots
 			plot.src = "/cs6750/images/MICROWAVE_INTERFACE_PROJECT_STDCONTRAST.png";
 		}
 	</script>
-
+	
+	var isPlaying = false;
 	<script>
 			var playSetTime = "playSetTime";
 			var playCook = "playCook";
 			var playDefrost = "playDefrost";
-			var isPlaying = false;
-			var isPaused = false;
 			audio.volume = 0.4;
 
 			function play(button) {
@@ -397,20 +396,16 @@ title: Math, Sonification, Plots
 						var audio = document.getElementById("audio_defrost");
 					}
 					
-					if (!isPlaying & isPaused) {
+					if (!isPlaying) {
 						audio.play();
 						isPlaying = true;
 					}
+					else if (!audio.ended) {
+						audio.pause();
+						isPlaying = false;
+					}
 					else {
-						if (!audio.ended & !isPaused) {
-							audio.pause();
-							isPlaying = false;
-							isPaused = true;
-						}
-						else {
-							audio.play();
-							isPlaying = true;
-						}
+						isPlaying = false;
 					}
 			}
 	</script>
