--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -381,7 +381,9 @@ title: Math, Sonification, Plots
 			var playSetTime = "playSetTime";
 			var playCook = "playCook";
 			var playDefrost = "playDefrost";
-			var isPlaying = false;
+			var isPlayingIntro = false;
+			var isPlayingCook = false;
+			var isPlayingDefrost = false;
 			audio.volume = 0.4;
 
 			function play(button) {
@@ -396,12 +398,17 @@ title: Math, Sonification, Plots
 						var audio = document.getElementById("audio_defrost");
 					}
 					
-					if (!isPlaying) {
+					if (!isPlayingIntro && !isPlayingCook && !isPlayingDefrost) {
+						if (audio == document.getElementById("audio_cook" ||
+						    audio == document.getElementById("audio_defrost") {
+							audio.loop = true;
+						}
 						audio.play();
 						isPlaying = true;
 					}
 					else if (!audio.ended) {
-						audio.pause();
+						// audio.pause();
+						audio.load();
 						isPlaying = false;
 					}
 					else {
