MODIFY FILES: PAUSE SOUNDS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -399,8 +399,8 @@ title: Math, Sonification, Plots
 					}
 					
 					if (!isPlayingIntro && !isPlayingCook && !isPlayingDefrost) {
-						if (audio == document.getElementById("audio_cook" ||
-						    audio == document.getElementById("audio_defrost") {
+						if (audio == document.getElementById("audio_cook") ||
+						    audio == document.getElementById("audio_defrost")) {
 							audio.loop = true;
 						}
 						audio.play();
