MODIFY FILES: STOP SOUNDS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -409,7 +409,9 @@ title: Math, Sonification, Plots
 					else if (!audio.ended) {
 						// audio.pause();
 						audio.load();
-						isPlaying = false;
+						isPlayingIntro = false;
+						isPlayingCook = false;
+						isPlayingDefrost = false;
 					}
 			}
 	</script>
