--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -355,7 +355,7 @@ title: Math, Sonification, Plots
 		}
 
 		function mouseOut() {
-		  document.getElementById("myWarning").style.color = "black";
+		  document.getElementById("myWarning").style.color = "yellow";
 		}
 	</script>
 	
