--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -359,6 +359,7 @@ title: Math, Sonification, Plots
 		}
 	</script>
 	
+	<audio id="program_microwave" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/program_microwave.mp4"></audio>
 	<audio id="audio_intro" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
 	<audio id="audio_cook" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_cook_sound.mp4"></audio>
 	<audio id="audio_defrost" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_defrost_sound.mp4"></audio>
@@ -394,13 +395,13 @@ title: Math, Sonification, Plots
 		
 		function mouseOverProject() {
 		  var audio;
-		  audio = document.getElementById("audio_cook");
+		  audio = document.getElementById("program_microwave");
 		  audio.play();
 		}
 
 		function mouseOutProject() {
 		  var audio;
-		  audio = document.getElementById("audio_cook");
+		  audio = document.getElementById("program_microwave");
 		  audio.load();
 		}
 				
