--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -355,19 +355,25 @@ title: Math, Sonification, Plots
 	<script>
 		document.getElementById("myWarning").onmouseover = function() {mouseOverText()};
 		document.getElementById("myWarning").onmouseout = function() {mouseOutText()};
+		document.getElementById("myFunction").onmouseover = function() {mouseOverImage()};
+		document.getElementById("myFunction").onmouseout = function() {mouseOutImage()};
+		
+		function mouseOverImage() {
+		  audio = document.getElementById("program_microwave");
+		  audio.play();
+		}
+
+		function mouseOutImage() {
+		  audio = document.getElementById("program_microwave");
+		  audio.load();
+		}
 		
 		function mouseOverText() {
-			var audio;
-			audio = document.getElementById("program_microwave");
-			audio.play();
-			document.getElementById("myWarning").style.color = "red";
+		  document.getElementById("myWarning").style.color = "red";
 		}
 
 		function mouseOutText() {
-			var audio;
-			audio = document.getElementById("program_microwave");
-			audio.load();
-			document.getElementById("myWarning").style.color = "green";
+		  document.getElementById("myWarning").style.color = "green";
 		}
 	</script>
 	
